# exdsdevs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/ping_pong/: README.md  experiment_1.json  main.rs  ping_pong.rs  resource_1.json  resource_2.json
examples/ping_pong/ping_pong_model/: ping-pong.json
examples/ping_pong/ping_pong_model/subs/: agent.json
src/: containers.rs  dynamic.rs  errors.rs  experiment.rs  factory.rs  lib.rs  logger.rs  model.rs  observer.rs  root_simulator.rs  sim_model.rs  simulator.rs  time.rs  utils.rs
tests/: 1_ping-pong_experiment.rs
tests/experiments/ping_pong/: experiment.json
tests/experiments/ping_pong/ping_pong_model/subs/: agent.json
tests/experiments/ping_pong_log/: experiment.json
tests/models/ping_pong/: ping-pong.json
tests/models/ping_pong_log/: ping-pong.json
